feat: init enviorment

--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
   "name": "yarn-berry-pnp-monorepo-test",
-  "packageManager": "yarn@3.3.1"
+  "packageManager": "yarn@3.3.1",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
+  "devDependencies": {
+    "typescript": "^4.9.4"
+  }
 }
