--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@packages/shared",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash-es": "^4.17.21"
   },
   "module": "src/index.ts",
   "devDependencies": {
-    "@types/lodash": "^4.14.191"
+    "@types/lodash-es": "^4.17.6"
   }
 }
