--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,11 +1,16 @@
 {
   "name": "@packages/shared",
   "private": true,
-  "dependencies": {
-    "lodash-es": "^4.17.21"
+  "main": "dist/src/index.js",
+  "types": "src/index.ts",
+  "scripts": {
+    "build": "tsc -b -v"
   },
-  "module": "src/index.ts",
+  "dependencies": {
+    "cowsay": "^1.5.0"
+  },
   "devDependencies": {
-    "@types/lodash-es": "^4.17.6"
+    "@types/node": "^18.11.18",
+    "typescript": "^4.9.4"
   }
 }
