--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,3 +1,9 @@
 {
-  "extends": "../../tsconfig.base.json"
+  "compilerOptions": {
+    "rootDir": ".",
+    "outDir": "dist",
+    "composite": true,
+    "module": "commonjs"
+  },
+  "include": ["src"]
 }
