--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -3,7 +3,8 @@
     "rootDir": ".",
     "outDir": "dist",
     "composite": true,
-    "module": "commonjs"
+    "module": "ESNext",
+    "moduleResolution": "node"
   },
   "include": ["src"]
 }
