--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "tsc-watch -b --onSuccess 'node dist/src/main.js'",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -49,6 +49,7 @@
     "ts-jest": "28.0.1",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
+    "tsc-watch": "^6.0.0",
     "tsconfig-paths": "4.0.0",
     "typescript": "^4.3.5"
   },
