--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@packages/shared",
   "private": true,
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
   "scripts": {
     "build": "tsc -b -v"
   },
-  "dependencies": {
-    "axios": "^1.2.2"
-  },
+  "types": "dist/src/index.d.ts",
+  "main": "dist/src/index.js",
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.18",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
