--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -3,8 +3,7 @@
     "rootDir": ".",
     "outDir": "dist",
     "composite": true,
-    "module": "ESNext",
-    "moduleResolution": "node"
+    "module": "CommonJS"
   },
   "include": ["src"]
 }
