feat: add sourceMap & declarationMap setting on @packages/shared

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -3,7 +3,9 @@
     "rootDir": ".",
     "outDir": "dist",
     "composite": true,
-    "module": "CommonJS"
+    "module": "CommonJS",
+    "sourceMap": true,
+    "declarationMap": true
   },
   "include": ["src"]
 }
