--- a/packages/nest/tsconfig.json
+++ b/packages/nest/tsconfig.json
@@ -19,10 +19,5 @@
     "noFallthroughCasesInSwitch": false,
     "composite": true
   },
-  "include": ["src"],
-  "references": [
-    {
-      "path": "../shared"
-    }
-  ]
+  "include": ["src"]
 }
