--- a/packages/shared-data/tsconfig.base.json
+++ b/packages/shared-data/tsconfig.base.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "dist",
     "composite": true,
-    "module": "CommonJS",
     "sourceMap": true,
-    "declarationMap": true
+    "esModuleInterop": true,
+    "declarationMap": true,
+    "target": "ES2020",
+    "moduleResolution": "node"
   },
   "include": ["src"]
 }
