--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "watch": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@packages/shared": "workspace:*",
+    "@packages/shared-data": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
