feat: Conditional exports의 fallback값 지정 ("type": "commonjs")

--- a/packages/shared-data/package.json
+++ b/packages/shared-data/package.json
@@ -19,6 +19,7 @@
       }
     }
   },
+  "type": "commonjs",
   "types": "dist/cjs/src/index.d.ts",
   "main": "dist/cjs/src/index.js",
   "devDependencies": {
