feat: 불필요 설정 제외

--- a/packages/nest/tsconfig.json
+++ b/packages/nest/tsconfig.json
@@ -16,8 +16,7 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "composite": true
+    "noFallthroughCasesInSwitch": false
   },
   "include": ["src"]
 }
