feat: update 'tsconfig' filename to more generic one

--- a/packages/shared-data/tsconfig.json
+++ b/packages/shared-data/tsconfig.json
@@ -4,6 +4,7 @@
     "sourceMap": true,
     "esModuleInterop": true,
     "declarationMap": true,
+    "declaration": true,
     "target": "ES2020",
     "moduleResolution": "node"
   },
