fix: @packages/shared-data의 package.json 수정 - 로컬에서 개발할 때 해당 모듈의 원본 소스코드를 제대로 찾을 수 있도록, types와 main 필드를 소스코드의 주소로 바꿈.

--- a/packages/shared-data/package.json
+++ b/packages/shared-data/package.json
@@ -19,8 +19,8 @@
       }
     }
   },
-  "types": "dist/cjs/src/index.d.ts",
-  "main": "dist/cjs/src/index.js",
+  "types": "src/index.ts",
+  "main": "src/index.ts",
   "devDependencies": {
     "typescript": "^4.9.4"
   },
